<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FD4D5353"
    android:backgroundTint="#007C7979"
    tools:context=".Activities.SearchActivity">

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/activity_search_bottom_search_button"
        android:text="@android:string/search_go"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/activity_search_fragment_background"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
        app:layout_constraintVertical_bias="0.85">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/autoCompleteFragment2"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/searchHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/red_orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/closeText"
        android:layout_width="56dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/close"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="348dp"
        android:layout_height="42dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/activity_search_radio_button"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <RadioButton
            android:id="@+id/WalkRadioBtn"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/walk" />

        <RadioButton
            android:id="@+id/CarRadioBtn"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/car" />

        <RadioButton
            android:id="@+id/BikeRadioBtn"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/bike" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/activity_search_fragment_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchHead">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/autoCompleteFragment1"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="348dp"
        android:layout_height="42dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/activity_search_radio_button"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1">

        <RadioButton
            android:id="@+id/WalkRadioBtn2"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/walk" />

        <RadioButton
            android:id="@+id/CarRadioBtn2"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/car" />

        <RadioButton
            android:id="@+id/BikeRadioBtn2"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/bike" />

    </RadioGroup>

    <Spinner
        android:id="@+id/placeTypeSpinner"
        android:layout_width="348dp"
        android:layout_height="42dp"
        android:layout_margin="20dp"
        android:background="@drawable/activity_search_placetype_btn"
        android:entries="@array/spinner_items"
        app:layout_constraintBottom_toTopOf="@+id/searchBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.261" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"

        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/placeTypeSpinner"
        app:layout_constraintEnd_toEndOf="@+id/placeTypeSpinner"
        app:layout_constraintTop_toTopOf="@+id/placeTypeSpinner"
        app:layout_constraintVertical_bias="0.483"
        app:srcCompat="@android:drawable/arrow_down_float" />

</androidx.constraintlayout.widget.ConstraintLayout>