<resources>
    <string name="app_name">TastyTravel</string>
    <string name="continue_to_main">Continue Without An Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_prompt">Don\'t have an Account? SIGN UP</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mainbackground">mainbackground</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoiam9obmRvd2F0ZXIiLCJhIjoiY2szcWNjdHIyMDA3cDNlcGlseWt3cjRiNiJ9.Bu2jIzXSGZNcxQBtGCrwbQ</string>
    <string name="saved_places">Saved Places</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="food_collage">Food collage</string>
    <string name="profile">Profile</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string-array name="spinner_items">
        <item>Bar</item>
        <item>Cafe</item>
        <item>Restaurant</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="email_address">email@address.com</string>
    <string name="enter_an_email">Enter an Email</string>
    <string name="create_a_password">Create a Password</string>
    <string name="password_must_be_at_6_least_6_characters_long">Password must be at least 6 characters long</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="please_fill_in_the_details_below_to_create_an_account">Please Fill in the Details Below to Create an Account</string>
    <string name="log_in_now">Sign In Now</string>
    <string name="please_login_to_continue_using_the_app">Please Login to Continue Using the App</string>
    <string name="logout">Logout</string>
    <string name="how_to_use">How To Use</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_Paragraph"> If you have any questions feel free to send us an email or check out our
        gitlab repository for user manuals and more information.\n
        \n
        Gerard: gerard.slowey2@mail.dcu.ie\n
        Michael: michael.savage7@mail.dcu.ie
        
    </string>
    <string name="howToUse_Paragraph"> 1. Press the FIND PLACES TO MEET button to begin your search.\n
        \n
        2. Enter your location. Google auto suggest will help you pick your location as you type.\n
        \n
        3. Choose your mode of transport. You can choose between Walking, Driving, or Cycling.\n
        \n
        4. Repeat the steps for your friend. Enter their location and their mode of transport.\n
        \n
        5. Add the type of place you want to meet. You can pick between Bars, Cafes, or Restaurants.\n
        \n
        6. press SEARCH to see your map.\n
        \n
        \n
        Your map will show your location and your friend\'s location as RED markers. You can press on
        them to see which one is which.\n
        \n
        Our algorithm will pick the best spot to start searching from. By default this spot is hidden.
        It is a BLUE marker and you can toggle it ON/OFF in the settings.\n
        \n
        There is also a settings toggle to draw black lines that enclose each RED marker. These lines
        represent how far a person can reach depending on the mode of transport.
    </string>
    <string name="about_pizza_background">Pizza background</string>
    <string name="suggested_places">Suggested Places</string>
    <string name="enter_another_location">Enter Another Location</string>
    <string name="current_location">Current Location</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="close">Close</string>
    <string name="walk">Walk</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="delete">Delete Account</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_saved_places">Saved Places On Map</string>
    <string name="settings_explanation_isochrone">The isochrone is made up of coordinates that join together
        to form a perimeter around the locations. They represent how far a person can reach within a
        certain amount of time. Turn it ON/OFF depending on your preference.
    </string>
    <string name="settings_explanation_midpoint">Your location and Their location are shown as red
        markers. The best meeting point is shown as a blue marker. If you do not want to
        see the best meeting place marker, you can also turn it ON/OFF depending on your preference.
    </string>
    <string name="clear_favs">Clear Favourites</string>
    <string name="clear_history">Clear History</string>
    <string name="find_places_to_meet">FIND PLACES TO MEET</string>
    <string name="my_saved_places">My Saved Places</string>
    <string name="my_history">My History</string>
    <string name="image_of_beers">image of beers.</string>
    <string name="image_of_coffees">image of coffees.</string>

</resources>
