...
        android:fontFamily="sans-serif-black"

        android:text="@string/or"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/continueWithoutAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpText"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
...
